# MySQLDatabase

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
data/clean_data/: books.csv
docs/: ERD.txt
src/: __main__.py
src/data_cleaning/: data_cleaning.ipynb
src/setup_database/: db_setup.py
src/simple_queries_and_visualization/: simple_Q_&_V.ipynb
