[tool.poetry]
name = "mysql-database"
version = "0.1.0"
description = ""
authors = ["PetrFridrich <petr.fridrich.1998@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "^9.1.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
